Add GraphHopper, StreetSegment model