@@ -7,11 +7,8 @@ import berlin.tu.cyclinginfrastructurebackend.domain.enums.BikeType;
 import berlin.tu.cyclinginfrastructurebackend.domain.enums.IncidentType;
 import berlin.tu.cyclinginfrastructurebackend.domain.enums.ParticipantType;
 import berlin.tu.cyclinginfrastructurebackend.domain.enums.PhoneLocation;
-import com.opencsv.CSVParser;
-import com.opencsv.CSVParserBuilder;
-import com.opencsv.CSVReader;
-import com.opencsv.CSVReaderBuilder;
-import com.opencsv.exceptions.CsvValidationException;
+import de.siegmar.fastcsv.reader.CsvRecord;
+import de.siegmar.fastcsv.reader.CsvReader;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.PrecisionModel;
@@ -38,18 +35,9 @@ public class SimRaFileParser {
 
         try (BufferedReader br = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
 
-            // We use OpenCSV's CSVReader but control the iteration manually to handle the multi-section format
-            // Configure parser to handle the standard simra CSV format
-            CSVParser parser = new CSVParserBuilder()
-                    .withSeparator(',')
-                    .withIgnoreQuotations(true)
-                    .build();
+            // FastCSV reader
+            CsvReader<CsvRecord> csvReader = CsvReader.builder().ofCsvRecord(br);
 
-            CSVReader csvReader = new CSVReaderBuilder(br)
-                    .withCSVParser(parser)
-                    .build();
-
-            String[] line;
             boolean processingIncidents = true;
             boolean incidentHeaderFound = false;
             boolean pointHeaderFound = false;
@@ -57,55 +45,52 @@ public class SimRaFileParser {
             List<RidePoint> points = new ArrayList<>();
             int sequence = 0;
 
-            try {
-                while ((line = csvReader.readNext()) != null) {
-                    // Check for empty lines or comments structure
-                    if (line.length == 0 || (line.length == 1 && line[0].trim().isEmpty())) {
+            for (CsvRecord record : csvReader) {
+                // Check for empty lines or single column weirdness
+                if (record.getFieldCount() == 0) continue;
+                String firstField = record.getField(0);
+
+                if (firstField.trim().isEmpty() && record.getFieldCount() == 1) continue;
+
+                // Check for section separator
+                if (firstField.startsWith("======")) {
+                    processingIncidents = false;
+                    continue;
+                }
+
+                // Check for file version header (e.g., 58#2)
+                if (record.getFieldCount() == 1 && firstField.contains("#")) {
+                    continue;
+                }
+
+                if (processingIncidents) {
+                    // Detect Incident Header
+                    if (!incidentHeaderFound) {
+                        if ("key".equals(firstField)) {
+                            incidentHeaderFound = true;
+                        }
                         continue;
                     }
 
-                    // Check for section separator
-                    if (line.length == 1 && line[0].startsWith("======")) {
-                        processingIncidents = false;
+                    // Parse Incident Row
+                    parseIncidentRow(ride, record);
+
+                } else {
+                    // Detect Point Header
+                    if (!pointHeaderFound) {
+                        if (record.getFieldCount() > 1 && "lat".equals(firstField) && "lon".equals(record.getField(1))) {
+                            pointHeaderFound = true;
+                        }
                         continue;
                     }
 
-                    // Check for file version header (e.g., 58#2) - usually length 1
-                    if (line.length == 1 && line[0].contains("#")) {
-                        continue;
-                    }
-
-                    if (processingIncidents) {
-                        // Detect Incident Header
-                        if (!incidentHeaderFound) {
-                            if (line.length > 0 && line[0].equals("key")) {
-                                incidentHeaderFound = true;
-                            }
-                            continue;
-                        }
-
-                        // Parse Incident Row
-                        parseIncidentRow(ride, line);
-
-                    } else {
-                        // Detect Point Header
-                        if (!pointHeaderFound) {
-                            if (line.length > 1 && line[0].equals("lat") && line[1].equals("lon")) {
-                                pointHeaderFound = true;
-                            }
-                            continue;
-                        }
-
-                        // Parse Point Row
-                        RidePoint point = parseRidePointRow(line, sequence++);
-                        if (point != null) {
-                            point.setRide(ride);
-                            points.add(point);
-                        }
+                    // Parse Point Row
+                    RidePoint point = parseRidePointRow(record, sequence++);
+                    if (point != null) {
+                        point.setRide(ride);
+                        points.add(point);
                     }
                 }
-            } catch (CsvValidationException e) {
-                throw new IOException("CSV validation error", e);
             }
 
             ride.setRidePoints(points);
@@ -117,8 +102,8 @@ public class SimRaFileParser {
 
     private void addPointsToRide(Ride ride, List<RidePoint> points) {
         if (!points.isEmpty()) {
-            ride.setStartTime(points.get(0).getTimestamp());
-            ride.setEndTime(points.get(points.size() - 1).getTimestamp());
+            ride.setStartTime(points.getFirst().getTimestamp());
+            ride.setEndTime(points.getLast().getTimestamp());
 
             Coordinate[] coordinates = points.stream()
                     .filter(p -> p.getLocation() != null)
@@ -131,79 +116,110 @@ public class SimRaFileParser {
         }
     }
 
-    private void parseIncidentRow(Ride ride, String[] parts) {
-        if (parts.length < 9) return;
+    private void parseIncidentRow(Ride ride, CsvRecord record) {
+        if (record.getFieldCount() < 9) return;
 
         try {
-            // Metadata extraction (lazy loading from first valid row)
             if (ride.getBikeType() == null) {
-                if (!parts[4].isEmpty()) ride.setBikeType(BikeType.fromCode(Integer.parseInt(parts[4])));
-                ride.setChildTransport("1".equals(parts[5]));
-                ride.setTrailerAttached("1".equals(parts[6]));
-                if (!parts[7].isEmpty()) ride.setPhoneLocation(PhoneLocation.fromCode(Integer.parseInt(parts[7])));
+                String bikeStr = record.getField(4);
+                if (!bikeStr.isEmpty()) ride.setBikeType(BikeType.fromCode(Integer.parseInt(bikeStr)));
+                ride.setChildTransport("1".equals(record.getField(5)));
+                ride.setTrailerAttached("1".equals(record.getField(6)));
+                String pLocStr = record.getField(7);
+                if (!pLocStr.isEmpty()) ride.setPhoneLocation(PhoneLocation.fromCode(Integer.parseInt(pLocStr)));
             }
 
+            String incTypeStr = record.getField(8);
+            if (incTypeStr.isEmpty()) return;
 
-            int incidentTypeCode = Integer.parseInt(parts[8]);
+            int incidentTypeCode = Integer.parseInt(incTypeStr);
             // Skip dummy incidents
             if (incidentTypeCode == -5) return;
 
             Incident incident = new Incident();
             incident.setRide(ride);
-            incident.setIncidentKey(Integer.parseInt(parts[0]));
+            incident.setIncidentKey(Integer.parseInt(record.getField(0)));
 
-            if (!parts[1].isEmpty() && !parts[2].isEmpty()) {
+            String latStr = record.getField(1);
+            String lonStr = record.getField(2);
+            if (!latStr.isEmpty() && !lonStr.isEmpty()) {
                 incident.setLocation(geometryFactory.createPoint(new Coordinate(
-                        Double.parseDouble(parts[2]), Double.parseDouble(parts[1]))));
+                        Double.parseDouble(lonStr), Double.parseDouble(latStr))));
             }
 
-            if (!parts[3].isEmpty()) incident.setTimestamp(Long.parseLong(parts[3]));
+            String tsStr = record.getField(3);
+            if (!tsStr.isEmpty()) incident.setTimestamp(Long.parseLong(tsStr));
             incident.setIncidentType(IncidentType.fromCode(incidentTypeCode));
 
             // Participants logic
             Set<ParticipantType> participants = new HashSet<>();
-            if (parts.length > 9 && "1".equals(parts[9])) participants.add(ParticipantType.BUS);
-            if (parts.length > 10 && "1".equals(parts[10])) participants.add(ParticipantType.CYCLIST);
-            if (parts.length > 11 && "1".equals(parts[11])) participants.add(ParticipantType.PEDESTRIAN);
-            if (parts.length > 12 && "1".equals(parts[12])) participants.add(ParticipantType.DELIVERY_VAN);
-            if (parts.length > 13 && "1".equals(parts[13])) participants.add(ParticipantType.TRUCK);
-            if (parts.length > 14 && "1".equals(parts[14])) participants.add(ParticipantType.MOTORCYCLE);
-            if (parts.length > 15 && "1".equals(parts[15])) participants.add(ParticipantType.CAR);
-            if (parts.length > 16 && "1".equals(parts[16])) participants.add(ParticipantType.TAXI);
-            if (parts.length > 17 && "1".equals(parts[17])) participants.add(ParticipantType.OTHER);
-            if (parts.length > 20 && "1".equals(parts[20])) participants.add(ParticipantType.SCOOTER);
+            checkParticipant(participants, record, 9, ParticipantType.BUS);
+            checkParticipant(participants, record, 10, ParticipantType.CYCLIST);
+            checkParticipant(participants, record, 11, ParticipantType.PEDESTRIAN);
+            checkParticipant(participants, record, 12, ParticipantType.DELIVERY_VAN);
+            checkParticipant(participants, record, 13, ParticipantType.TRUCK);
+            checkParticipant(participants, record, 14, ParticipantType.MOTORCYCLE);
+            checkParticipant(participants, record, 15, ParticipantType.CAR);
+            checkParticipant(participants, record, 16, ParticipantType.TAXI);
+            checkParticipant(participants, record, 17, ParticipantType.OTHER);
+            checkParticipant(participants, record, 20, ParticipantType.SCOOTER);
 
             incident.setInvolvedParticipants(participants);
 
-            if (parts.length > 18) incident.setScary("1".equals(parts[18]));
-            if (parts.length > 19) incident.setDescription(parts[19]);
+            if (record.getFieldCount() > 18) incident.setScary("1".equals(record.getField(18)));
+            if (record.getFieldCount() > 19) incident.setDescription(record.getField(19));
 
             ride.getIncidents().add(incident);
         } catch (NumberFormatException ignored) { }
     }
 
-    private RidePoint parseRidePointRow(String[] parts, int sequence) {
-        if (parts.length < 6) return null;
+    private void checkParticipant(Set<ParticipantType> participants, CsvRecord record, int index, ParticipantType type) {
+        if (record.getFieldCount() > index && "1".equals(record.getField(index))) {
+            participants.add(type);
+        }
+    }
+
+    private RidePoint parseRidePointRow(CsvRecord record, int sequence) {
+        if (record.getFieldCount() < 6) return null;
 
         RidePoint point = new RidePoint();
         point.setSequenceIndex(sequence);
 
         try {
-            if (!parts[0].isEmpty() && !parts[1].isEmpty()) {
+            String latStr = record.getField(0);
+            String lonStr = record.getField(1);
+
+            if (!latStr.isEmpty() && !lonStr.isEmpty()) {
                 point.setLocation(geometryFactory.createPoint(new Coordinate(
-                        Double.parseDouble(parts[1]), Double.parseDouble(parts[0]))));
+                        Double.parseDouble(lonStr), Double.parseDouble(latStr))));
             }
 
-            if (!parts[2].isEmpty()) point.setX(Double.parseDouble(parts[2]));
-            if (!parts[3].isEmpty()) point.setY(Double.parseDouble(parts[3]));
-            if (!parts[4].isEmpty()) point.setZ(Double.parseDouble(parts[4]));
-            if (!parts[5].isEmpty()) point.setTimestamp(Long.parseLong(parts[5]));
-            if (parts.length > 6 && !parts[6].isEmpty()) point.setGpsAccuracy(Double.parseDouble(parts[6]));
+            String xStr = record.getField(2);
+            if (!xStr.isEmpty()) point.setX(Double.parseDouble(xStr));
 
-            if (parts.length > 9) {
-                if (!parts[7].isEmpty()) point.setA(Double.parseDouble(parts[7]));
-                if (!parts[8].isEmpty()) point.setB(Double.parseDouble(parts[8]));
-                if (!parts[9].isEmpty()) point.setC(Double.parseDouble(parts[9]));
+            String yStr = record.getField(3);
+            if (!yStr.isEmpty()) point.setY(Double.parseDouble(yStr));
+
+            String zStr = record.getField(4);
+            if (!zStr.isEmpty()) point.setZ(Double.parseDouble(zStr));
+
+            String tsStr = record.getField(5);
+            if (!tsStr.isEmpty()) point.setTimestamp(Long.parseLong(tsStr));
+
+            if (record.getFieldCount() > 6) {
+                String accStr = record.getField(6);
+                if (!accStr.isEmpty()) point.setGpsAccuracy(Double.parseDouble(accStr));
+            }
+
+            if (record.getFieldCount() > 9) {
+                String aStr = record.getField(7);
+                if (!aStr.isEmpty()) point.setA(Double.parseDouble(aStr));
+
+                String bStr = record.getField(8);
+                if (!bStr.isEmpty()) point.setB(Double.parseDouble(bStr));
+
+                String cStr = record.getField(9);
+                if (!cStr.isEmpty()) point.setC(Double.parseDouble(cStr));
             }
 
             return point;
